<resources>
    <string name="app_name">Zadanie</string>
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">Login</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_sign_up">Sign up </string>
    <string name="login_sign_up">"Sign up failed"</string>
    <string name="or_log_in">or log in</string>
    <string name="or_create_account">or create account.</string>
    <string name="bars">Bars</string>
    <string name="log_out">Log out</string>
    <string name="repeat_password">repeat password</string>
    <string name="back">back</string>
    <string name="zobrazit_na_mape">Zobrazit na mape</string>
    <string name="friends">Friends</string>
    <string name="location">Location</string>
    <string name="pubs">pubs</string>
    <string name="logout" />
    <string name="sort_pubs" />
    <string name="sort_button" />
    <string name="sort_by_distance_icon" />
    <string name="sort_by_number_of_people_icon" />
    <string name="sort_by_name_icon" />
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_friend" />
    <string name="username" />
    <string name="osoby">Osoby</string>
    <string name="add_friend_icon" />
    <string name="submit" />
    <string name="name" />
    <string name="accept">Accept</string>
    <string name="Username">Username</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
</resources>